# cardisplay

./: .gitignore  Cargo.toml  README.md  plans
assets/: config.json
assets/audio/engine/: engines.json
assets/mesh/: car.glb  rx7.blend  tire.glb  track.glb
cardisplay_macros/: Cargo.toml
cardisplay_macros/src/: lib.rs
project/: graph_visual.py  hp_torque_curve.csv
project/sound/Engine_1/: drive_1.aup3  drive_2.aup3  drive_3.aup3  idle.aup3
src/: debug.rs  main.rs
src/cars/: car.rs  controls.rs  debug.rs  enginetrans.rs  mod.rs  parts.rs  wheels.rs
src/core/: camera.rs  controls.rs  handles.rs  helpers.rs  helpers_old.rs  mod.rs  physics.rs  player.rs  states.rs
src/core/assets/: global.rs  mod.rs
src/core/helpers/: markers.rs  mod.rs  text.rs  window.rs
src/core/xinput/: mod.rs
src/menus/: client_pause.rs  controls.rs  helpers.rs  mainmenu.rs  mod.rs  settings.rs  setup.rs  states.rs
src/menus/client/: mod.rs  pause.rs
src/menus/helpers/: components.rs  definitions.rs  layout.rs  mod.rs  systems.rs  widgets.rs
src/menus/main/: main.rs  mod.rs  multiplayer.rs  select.rs  settings.rs  singleplayer.rs
src/player/: controls.rs  mod.rs  physics.rs  player.rs  setup.rs  states.rs
src/server/: client.rs  mod.rs  setup.rs  states.rs
src/vehicle/: car.rs  controls.rs  debug.rs  mod.rs  setup.rs
src/vehicle/parts/: engine.rs  mod.rs  parts.rs  transmission.rs  wheels.rs
src/world/: mod.rs  setup.rs
