[package]
name = "cardisplay"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.2.0"
bevy-inspector-egui = "0.28.1"
rand_core = "0.6"
bevy_rand = { version = "0.9.0", features = ["rand_chacha", "wyrand"]}
leafwing-input-manager = "0.16.0"
mevy = "0.1.2"
bevy_common_assets = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }

cardisplay_macros = { path = "./cardisplay_macros" }

[dependencies.bevy]
version = "0.15.1"
features = ["wav"]
